<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iconView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/vertical_padding_medium"
        android:src="@drawable/ic_login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_padding_medium"
        android:text="@string/txt_sign_up_title"
        android:textAppearance="@style/TextAppearance.SignUp.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconView" />

    <TextView
        android:id="@+id/subtitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txt_role_selection_subtitle"
        android:textAppearance="@style/TextAppearance.SignUp.SubTitle"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTxt" />

    <Button
        android:id="@+id/studentParentBtn"
        style="@style/Widget.Button.OutlinedButton.Curved"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_student_parent_sign_up_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTxt" />

    <Button
        android:id="@+id/teacherBtn"
        style="@style/Widget.Button.OutlinedButton.Curved"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_teacher_sign_up_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentParentBtn" />

    <Button
        android:id="@+id/schoolManagementBtn"
        style="@style/Widget.Button.OutlinedButton.Curved"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_school_management_sign_up_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>