<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/vertical_padding_medium"
                android:src="@drawable/ic_login_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_padding_medium"
                android:text="@string/txt_login_title"
                android:textAppearance="@style/TextAppearance.SignUp.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iconView" />

            <TextView
                android:id="@+id/subtitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_padding_large"
                android:layout_marginTop="@dimen/vertical_padding_medium"
                android:text="@string/txt_login_subtitle"
                android:textAppearance="@style/TextAppearance.SignUp.SubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTxt" />

            <androidx.cardview.widget.CardView
                android:id="@+id/passwordTxtCard"
                style="@style/Widget.CardView"
                android:layout_marginTop="@dimen/horizontal_padding"
                android:layout_marginBottom="@dimen/horizontal_padding_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitleTxt">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.riteshakya.ui.components.TextInput
                        android:id="@+id/passwordTxt"
                        style="@style/Widget.Form.Input.Cards"
                        android:layout_marginTop="@dimen/vertical_padding_small"
                        android:hint="@string/txt_password"
                        android:imeOptions="actionNext"
                        android:paddingStart="@dimen/horizontal_padding_medium"
                        android:paddingEnd="@dimen/horizontal_padding_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:password="true" />

                    <com.riteshakya.ui.components.SelectInput
                        android:id="@+id/schoolSelect"
                        style="@style/Widget.Form.Input"
                        android:layout_marginStart="@dimen/horizontal_padding_medium"
                        android:layout_marginTop="@dimen/vertical_padding_medium"
                        android:layout_marginEnd="@dimen/horizontal_padding_medium"
                        android:layout_marginBottom="@dimen/vertical_padding_small"
                        android:hint="@string/txt_school"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/forgotPasswordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_padding"
                android:layout_marginEnd="@dimen/horizontal_padding_large"
                android:text="@string/txt_login_forgot_password"
                android:textAppearance="@style/TextAppearance.SignUp.Link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordTxtCard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.Button.Bottom"
        android:enabled="false"
        android:text="@string/txt_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>